<resources>
    <!-- Core -->
    <string name="app_name">memofy</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Memofy</string>
    <string name="nav_header_subtitle">Schedule your tasks</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_task">Create new task</string>
    <string name="menu_category">Create new category</string>
    <string name="menu_categories">Categories</string>

    <!-- Direction -->
    <string name="direction_task">TaskFragment</string>
    <string name="direction_tasks">TasksFragment</string>
    <string name="direction_categories">CategoriesFragment</string>
    <string name="direction_category">CategoryFragment</string>

    <!-- Content descriptions -->
    <string name="app_task_button_cd">Add task</string>
    <string name="task_icon_cd">Task</string>
    <string name="task_image_cd">Task image</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_date_hint">Date</string>
    <string name="task_save_button">Save</string>
    <string name="task_notification_text">Notification enable</string>
    <string name="task_description_hint">Description</string>
    <string name="task_page_title">Add task</string>
    <string name="task_category_hint">Category</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="template">Unknown</string>
    <string name="app_category_button_cd">Add category</string>
    <string name="task_attachments_text">Attachments</string>
    <string name="action_filter">Filter</string>
    <string name="menu_category_filter_cd">Filter category</string>
    <string name="category_title_hint">Category name</string>
    <string name="category_color_label">Category color</string>
    <string name="category_color_button">Pick color</string>
    <string name="item_color_name_template">C</string>
    <string name="item_color_value_template">0</string>
    <string name="action_delete">Delete</string>
    <string name="tasks_tab_cd">Task filter</string>
    <string name="item_annex_icon_cd">Annex thumbnail</string>
    <string name="item_annex_button_cd">Delete item</string>
    <string name="settings_delay_hint">Time in minutes before notify</string>

    <!-- Snackbar/Toast -->
    <string name="error_settings_delay">Entered advance is incorrect.</string>
    <string name="task_date_text">Notification date</string>
    <string name="task_calendar_cd">Calendar</string>
    <string name="task_time_text">Notification time</string>
</resources>