<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.ertools.memofy.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_nav_tasks_to_nav_task"
            app:destination="@id/nav_task" />
    </fragment>

    <fragment
        android:id="@+id/nav_task"
        android:name="com.ertools.memofy.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task"
        >
        <action
            android:id="@+id/action_nav_task_to_nav_tasks"
            app:destination="@id/nav_tasks" />
    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.ertools.memofy.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_nav_categories_to_nav_category"
            app:destination="@id/nav_category" />
<!--            app:popUpTo="none"-->
    </fragment>

    <fragment
        android:id="@+id/nav_category"
        android:name="com.ertools.memofy.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_task"
        >
        <action
            android:id="@+id/action_nav_category_to_nav_categories"
            app:destination="@id/nav_categories"
            app:b ="false"/>
    </fragment>

</navigation>