<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/annex_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_card_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/surface"
            >

            <ImageView
                android:id="@+id/annex_icon"
                android:layout_margin="@dimen/annex_icon_margin"
                android:layout_width="@dimen/annex_icon_size"
                android:layout_height="@dimen/annex_icon_size"
                android:contentDescription="@string/item_annex_icon_cd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/annex_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/annex_name"
                android:textAppearance="@style/SmallText"
                android:text="@string/template"
                android:gravity="start|center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintLeft_toRightOf="@id/annex_icon"
                app:layout_constraintRight_toLeftOf="@id/annex_delete_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.IconButton"
                android:contentDescription="@string/item_annex_button_cd"
                android:id="@+id/annex_delete_button"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/on_surface"
                app:iconSize="@dimen/list_delete_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/annex_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/annex_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/annex_card_view"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>