<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.TasksFragment"
    >

<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/task_image_view"-->
<!--        android:contentDescription="@string/task_icon_cd"-->
<!--        android:src="@drawable/logo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/task_title_input"-->
<!--        />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/task_horizontal_guideline"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.10"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/task_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_title_input"
        android:hint="@string/task_title_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_horizontal_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/task_vertical_guideline"
        app:layout_constraintBottom_toTopOf="@id/task_description_input"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/task_notification_text"
        android:text="@string/task_notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/task_horizontal_guideline"
        app:layout_constraintLeft_toRightOf="@id/task_vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_notification_switch"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/task_notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/task_description_input"
        app:layout_constraintLeft_toRightOf="@id/task_vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_notification_text"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_description_input"
        android:hint="@string/task_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_title_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_category_spinner"
        />

    <Spinner
        android:id="@+id/task_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_description_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_date_input"
        />

    <DatePicker
        android:id="@+id/task_date_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/task_category_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_time_input"
        />

    <TimePicker
        android:id="@+id/task_time_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/task_date_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/task_save_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/task_save_button"
        android:text="@string/task_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/task_time_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/task_attach_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        android:contentDescription="@string/app_bar_button_cd"
        app:srcCompat="@drawable/ic_attachment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>